--- a/work10/local.css
+++ b/work10/local.css
@@ -1,10 +1,26 @@
+*{padding: 0;margin: 0;border: 0;}
+*,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+nav,footer,header,aside{display: block;}
+html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%; }
+input,button,textarea{font-family:inherit;}
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a,a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 body{
     width: 100%;
-    line-height: 25px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: rgb(80, 49, 169);
+    overflow-x: hidden;
 }
  /* Header */
 header{
@@ -18,6 +34,10 @@ a{
     color: white;
     text-decoration: none;
     cursor: pointer;
+}
+section{
+    padding-left: 30px;
+    padding-right: 30px;
 }
 a:hover{
     color: rgb(216, 211, 231) ;
@@ -68,7 +88,7 @@ li .gros:last-child::before{
     content: "";
     position: absolute;
     left: -20px;
-    top: -21px;
+    top: -30px;
     z-index: -1;
     width: 100px;
     height: 100px;
@@ -77,7 +97,7 @@ li .gros:last-child::before{
     opacity: 1;
 }
 li .gros:last-child:hover::before{
-    background: rgb(80,49 ,169 );   
+    background: rgb(55,33 ,121 );   
 }
 li .gros:last-child:hover::after{
     content: "";
@@ -127,8 +147,11 @@ li .gros {
     }
     
 }
-/* section 1 with slider */
-
+/* section 1 with carousel */
+.slider{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
 /* Контейнер карусели */
 .carousel-container {
     position: relative;
@@ -139,24 +162,32 @@ li .gros {
   /* Слайды карусели */
   .carousel {
     display: flex;
-    overflow: hidden;
+    /* overflow: hidden; */
+    transition: transform 0.3s ease-in-out;
   }
   
   .carousel-slide {
     min-width: 100%;
-    transition: transform 0.3s ease-in-out;
   }
-  
-  .carousel-slide img {
+  .carousel-text{
+    margin: 5% auto auto;
+    padding: 30px;
+    width: 100%;
+  }
+ .carousel-text h1{
+    margin-top: 20px;
+ }
+  /* .carousel-slide img {
     width: 100%;
     display: block;
-  }
+  } */
   
   /* Индикаторы (квадратики) */
   .carousel-indicators {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 40px;
   }
   
   .indicator {
@@ -171,6 +202,188 @@ li .gros {
   .carousel-indicators .active {
     background-color: red;
   }
-  .text-sl{
-    font-size: 45px;
+  .text-sl {
+    font-size: 55px;
+    color: white;
   }
+ 
+  .f-size-b span{
+    color: black;
+  }
+  @media (max-width:730px) {
+    .carousel-text{
+        padding: 1% 0 0;
+        margin: 27% auto auto;
+        width: 100%;
+        text-align: center;
+    }
+    .carousel-text h3{
+        font-size: 20px;
+        text-transform: uppercase;
+        margin-top: 100px;
+    }
+    .carousel-text h1{
+        font-size: 27px;
+        text-transform: uppercase;
+        margin-top: 30px;
+    }
+    .text-button{
+        margin-top: 30px;
+    }
+}
+
+.col-md-12{
+    display: flex;
+    align-content: stretch; 
+}
+.col-md-6{
+    max-width: 50%;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding: 0;
+}
+image{
+    display: block;
+    height: auto;
+    max-width: 100%;
+   
+}
+.portfolio-text{
+    padding: 25px 30px;
+ }
+ .portfolio-text h2{
+    font-size: 3rem;
+    text-transform: uppercase;
+    text-transform: uppercase;
+  
+}
+.portfolio-text p{
+    margin-bottom: 10px;
+}
+.big {
+    background-color: rgb(3, 176, 161);
+}
+.pink {
+    background: #f44d90;
+}
+.brown {
+    background: #d3c0ab;
+}
+.sky-blue{
+ background: #83cdda;   
+}
+.yellow{
+    background: rgb(255, 216, 0);
+}
+ @media (max-width: 1280px) {
+     .portfolio-container {
+        padding-right: 15px;
+        padding-left: 15px;
+     } 
+     .col-md-6{
+        max-width: 100%;
+        font-size: 0.9rem;
+     }
+     img{
+        max-width: 100%;
+     }
+   
+}
+@media (max-width: 768px) {
+    .portfolio-container {
+    width: 100%;
+}
+     .col-md-12{
+       flex-wrap: wrap;
+     } 
+}
+
+/* section servise */
+.servise{
+    margin-top: 120px;
+}
+.title {
+     margin-bottom: 80px;
+}
+.servise-container{
+    margin-bottom: 100px;
+}
+.title h2{
+    font-weight: 600;
+    margin-bottom: 25px;
+    margin-top: 0;
+    text-transform: capitalize;
+    font-size: 4rem; 
+}
+.title span{
+    background: rgb(255, 0, 78) none repeat scroll 0 0;
+    display: inline-block;
+    height: 40px;
+    margin-left: 20px;
+    transform: rotateZ(45deg);
+    width: 40px;
+}
+.title hr{
+    border-width: 5px 0 0;
+    margin: 20px 0;
+    width: 70px;
+}
+hr{
+    border: 0;
+    border-top: 1px solid #eee;
+}
+.title p{
+    width: 44%;
+    font-size: 1.2rem;
+    line-height: 26px;
+
+}
+.servise-type{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    gap: 40px;
+    margin-bottom: 100px;
+}
+ .inner-box{
+    width: 33%;
+    background: white;
+    padding: 50px 0;
+    width: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.text-center h3{
+    color: black;
+    font-size: 24px;
+    padding-bottom: 20px;
+}
+.text-center h6{
+    color: rgb(32, 29, 29);
+    line-height: 25px;
+}
+.last{
+    margin-bottom: 20px;
+}
+.text-center img{
+    width: 60px;
+    height: 60px;
+    padding-bottom: 25px;
+}
+.servise-link{
+    display: block;
+   margin: 0 auto;
+   
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: rgb(80,49 ,169 );
+}
+
+@media(max-width:786px){
+    .servise-type{
+        flex-wrap: wrap;
+    }
+}
