--- a/work10/local.css
+++ b/work10/local.css
@@ -374,14 +374,17 @@ hr{
 }
 .servise-link{
     display: block;
-   margin: 0 auto;
-   
+    margin: 0 auto;
+    text-align: center;
     width: 40px;
     height: 40px;
+    line-height: 40px;
     border-radius: 50%;
     background: rgb(80,49 ,169 );
 }
-
+.map{
+    padding-bottom: 100px;
+}
 @media(max-width:786px){
     .servise-type{
         flex-wrap: wrap;
